<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="no">Нет</string>
    <string name="find_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="setting_button">Настройки</string>
    <string name="search">Поиск</string>
    <string name="black_theme">Темная тема</string>
    <string name="provide_app">Поделиться приложением</string>
    <string name="send_support">Написать в поддержку</string>
    <string name="user_term">Пользовательское соглашение</string>
    <string name="search_input">Поиск</string>
    <string name="cross_description">Крест для удаления текста</string>

    <string name="user_term_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="theme_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_to_site">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="developer_mail">delirium.ag@yandex.ru</string>
    <string name="image_song">image song</string>
    <string name="describe_point">point for divided artist name and time song</string>
    <string name="describe_arrow">open song\'s details</string>

    <string name="not_found">Ничего не нашлось</string>
    <string name="not_connect_item_text">Проблемы со связью</string>
    <string name="not_connect_item_text_sub">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="not_connect_item_button">Обновить</string>
    <string name="title_history">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration_text">Длительность</string>
    <string name="collection_text">Альбом</string>
    <string name="year_song_text">Год</string>
    <string name="genre_song_desc">Жанр</string>
    <string name="country_song_text">Страна</string>

    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="playlist_media_empty">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_track">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="media">Медиатека</string>
    <string name="player_not_prepared">Медиаплеер еще не готов,\nповторите попытку позже.</string>

    <string name="title_media_create">Новый плейлист</string>
    <string name="edit_hint_media_create">Название*</string>
    <string name="edit_hint_media_create_description">Описание</string>
    <string name="create_button_media">Создать</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="create_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_dialog_neutral">Отмена</string>
    <string name="create_playlist_dialog_close">Завершить</string>

    <string name="bottom_sheet_add_to_playlist">Добавить в плейлист</string>
    <string name="bottom_sheet_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="bottom_sheet_exist_to_playlist">Трек уже добавлен в плейлист %1$s</string>

    <string name="playlist_question_delete_song">Хотите удалить трек?</string>
    <string name="playlist_question_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes">да</string>
    <string name="playlist_share_not_songs">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_not_songs">В этом плейлисте нет треков</string>
    <string name="playlist_share_theme">Мой плейлист</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_edit_info">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>

    <string name="edit_playlist_title">Редактировать</string>
    <string name="edit_playlist_button">Сохранить</string>
    <string name="edit_playlist_dialog_title">Завершить редактирование плейлиста?</string>
    <string name="playlist_updated">Плейлист %1$s изменен</string>

    <string name="playlist_count_song_v1">%1$s треков</string>
    <string name="playlist_count_song_v2">%1$s трек</string>
    <string name="playlist_count_song_v3">%1$s трека</string>

    <string name="playlist_duration_song_v1">%1$s минут</string>
    <string name="playlist_duration_song_v2">%1$s минута</string>
    <string name="playlist_duration_song_v3">%1$s минуты</string>
</resources>