<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/additional_screen"
    android:id="@id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarSetting"
        style="@style/Theme.PlaylistMaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:paddingBottom="10dp"
        android:text="@string/setting_button"
        app:titleTextAppearance="@style/Toolbar.SubPage">

        <TextView
            style="@style/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting_button" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_mode"
        style="@style/item_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:layout_gravity="start"
        android:paddingHorizontal="@dimen/padding_setting_start_end"
        android:text="@string/black_theme"
        app:thumbTint="@color/switch_thumb_selector"
        app:trackTint="@color/switch_track_selector"
        />

    <TextView
        android:id="@+id/sharing_app"
        style="@style/item_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/padding_setting_start_end"
        android:paddingVertical="@dimen/padding_setting_top_bottom"
        android:text="@string/provide_app"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:id="@+id/message_support"
        style="@style/item_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:paddingHorizontal="@dimen/padding_setting_start_end"
        android:paddingVertical="@dimen/padding_setting_top_bottom"
        android:text="@string/send_support"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/terms_user"
        style="@style/item_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:paddingHorizontal="@dimen/padding_setting_start_end"
        android:paddingVertical="@dimen/padding_setting_top_bottom"
        android:text="@string/user_term"
        app:drawableEndCompat="@drawable/arrow" />

</LinearLayout>