<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_problem_item"
        android:layout_width="@dimen/item_size_image_error"
        android:layout_height="@dimen/item_size_image_error"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:src="@drawable/not_connect_search"
        />
    <TextView
        android:id="@+id/text_problem_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_connect_item_text"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/item_margin_vertical"
        style="@style/text_error_search"
        />
    <TextView
        android:id="@+id/text_problem_item_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_connect_item_text_sub"
        android:gravity="center_horizontal"
        android:layout_marginVertical="@dimen/item_margin_vertical"
        android:layout_marginHorizontal="@dimen/item_margin_horizontal"
        style="@style/text_error_search"
        />

    <Button
        android:id="@+id/button_update_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_connect_item_button"
        android:layout_gravity="center_horizontal"
        style="@style/button_item_update"
        />
</LinearLayout>