<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarSetting"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:paddingBottom="20dp"
        app:titleTextColor="@color/black"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:titleTextAppearance="@style/Toolbar.SubPage"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:paddingStart="16dp"
            android:paddingTop="21dp"
            android:paddingEnd="44dp"
            android:paddingBottom="21dp"
            android:text="@string/black_theme"
            android:textColor="@color/setting_text_color"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Switch"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="@color/white"
        android:paddingStart="16dp"
        android:paddingTop="21dp"
        android:paddingEnd="18dp"
        android:paddingBottom="21dp"
        android:text="@string/provide_app"
        android:textColor="@color/setting_text_color"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/share"
        app:drawableTint="@color/setting_icon_color" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/send_support"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:textColor="@color/setting_text_color"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingStart="16dp"
        android:paddingEnd="18dp"
        app:drawableEndCompat="@drawable/support"
        app:drawableTint="@color/setting_icon_color"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/user_term"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:textColor="@color/setting_text_color"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingStart="16dp"
        android:paddingEnd="18dp"
        app:drawableEndCompat="@drawable/arrow"
        app:drawableTint="@color/setting_icon_color"
        />

</LinearLayout>