<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical"
    style="@style/additional_screen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarSearch"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:paddingBottom="10dp"
        app:navigationIcon="@drawable/arrow_back"
        app:titleTextAppearance="@style/Toolbar.SubPage"
        style="@style/Theme.PlaylistMaker"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/search"
            style="@style/toolbar"
            />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingHorizontal="12dp"
        android:layout_marginHorizontal="@dimen/padding_search_edit_start_end"
        android:background="@drawable/search_edit_background"
        >
    <EditText
        android:id="@+id/edit_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_input"
        android:inputType="text"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:lines="1"
        android:autofillHints=""
        android:drawableStart="@drawable/edittext_search"
        android:drawablePadding="8dp"
        android:background="@color/search_edit_background"
        />
    <ImageView
        android:id="@+id/clear_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:src="@drawable/cross"
        android:visibility="gone"

        android:contentDescription="@string/cross_description" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_songs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="24dp"
        />


</LinearLayout>