<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_recycler_height"
    >

    <ImageView
        android:id="@+id/image_song_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/not_image"
        android:layout_marginHorizontal="@dimen/padding_item_recycler_horizontal"
        android:layout_marginVertical="@dimen/padding_item_recycler_vertical"
        android:contentDescription="@string/image_song" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical"
        android:paddingVertical="@dimen/padding_item_recycler_vertical"
        >
        <TextView
            android:id="@+id/name_song_item"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center_vertical"
            style="@style/item_recycler"
            tools:text="name songs"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/artist_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/item_sub_data"
                tools:text="artist name"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ellipse"
                android:padding="@dimen/ellipse_padding_item_recycler"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/describe_point"
                />

            <TextView
                android:id="@+id/time_song_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/item_sub_data"
                tools:text="0:00"
                />


        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/arrow_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/arrow"
        android:layout_gravity="center_vertical"
        android:layout_marginVertical="@dimen/padding_item_recycler_horizontal"
        android:contentDescription="@string/describe_arrow" />

</LinearLayout>