<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/additional_screen"
    tools:context=".media.ui.fragment.create.MediaCreateFragment">

    <LinearLayout
        android:id="@+id/toolBarMediaCreate"
        style="@style/Theme.PlaylistMaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:paddingVertical="10dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_marginHorizontal="16dp"
            android:clickable="true"
            android:focusable="true" />
        <TextView
            style="@style/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_media_create"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="12dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/media_create_image"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:background="@drawable/rounder_create_media"
        android:contentDescription="TODO"
        android:src="@drawable/add_photo_image"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarMediaCreate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/edit_hint_media_create"
        app:boxStrokeColor="@color/icon_blue"
        app:hintTextColor="@color/icon_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/media_create_image"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/text_hint">

        <EditText
            android:id="@+id/media_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/edit_hint_media_create_description"
        app:boxStrokeColor="@color/icon_blue"
        app:hintTextColor="@color/icon_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/text_hint">

        <EditText
            android:id="@+id/media_create_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/media_create_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_song_height"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create_button_media"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/create_button_not_active"
        android:enabled="false"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>